fix gap for card

--- a/local/templates/diel/frontend/css/style.css
+++ b/local/templates/diel/frontend/css/style.css
@@ -3526,13 +3526,13 @@ h2 {
 .section-card__list {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(15, max-content);
+  grid-template-rows: max-content;
   gap: 20px; }
 
 @media screen and (min-width: 768px) {
   .section-card__list {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(8, max-content);
+    grid-template-rows: max-content;
     gap: 30px; }
   .section-card__list .product-card--view-3 {
     grid-column-end: unset;
@@ -3543,7 +3543,7 @@ h2 {
 @media screen and (min-width: 1366px) {
   .section-card__list {
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, max-content); }
+    grid-template-rows: max-content; }
   .section-card__list .product-card--view-3 {
     grid-column-end: span 2;
     grid-row-end: span 2; }
